# LanDiff

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  readme.md  requirements.txt
ckpts/: CHECKSUM.md5  README.md  download.sh
gradio/: main.py
landiff/: __init__.py  infer_video.py  utils.py
landiff/diffusion/: arguments.py  dif_infer.py  diffusion_video.py  dit_video_concat.py
landiff/diffusion/configs/: cogvideox_2b.yaml  cogvideox_2b_control_theia_interpolate_video_vq.yaml
landiff/diffusion/configs/infer_cfgs/: 2b.yaml
landiff/diffusion/semantic_models/: condition.py
landiff/diffusion/semantic_models/feature_extractor/: moon_vq_warp.py  vq_warp.py
landiff/diffusion/semantic_models/modules/: vq_gan_blocks.py
landiff/diffusion/sgm/: util.py
landiff/diffusion/sgm/models/: autoencoder.py
landiff/diffusion/sgm/modules/: __init__.py
landiff/diffusion/sgm/modules/autoencoding/: temporal_ae.py
landiff/diffusion/sgm/modules/encoders/: modules.py
landiff/diffusion/vae_modules/: autoencoder.py  cp_enc_dec.py  regularizers.py
landiff/llm/: llm_cfg.py  llm_infer.py
landiff/llm/models/: lm_model.py  transformer.py
landiff/llm/modules/: conditioner.py  inference.py  text_encoder.py  tokenizer.py  tokens.py  transformer_blocks.py
landiff/modules/: packed_seq.py  pos_emb.py
landiff/tokenizer/: test_feature_extrator.py  tokenizer_cfg.py
landiff/tokenizer/models/: video_titok_vq.py
landiff/tokenizer/models/feature_extractor/: theia_extractor.py  theia_model.py
landiff/tokenizer/modules/: blocks.py  flex_attention_mask.py
(+9 files in other folders)
