[project]
name = "landiff"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "beartype==0.18.5",
    "deepspeed==0.14.4",
    "einops==0.8.0",
    "fiddle==0.3.0",
    "imageio==2.34.2",
    "imageio-ffmpeg==0.6.0",
    "kornia==0.7.3",
    "matplotlib==3.9.2",
    "modelscope>=1.25.0",
    "omegaconf==2.3.0",
    "pre-commit==3.6.0",
    "pytorch-lightning==2.3.3",
    "scipy==1.14.0",
    "sentencepiece==0.1.99",
    "swissarmytransformer==0.4.12",
    "torch==2.5.1",
    "torchvision==0.20.1",
    "transformers==4.47.1",
    "vector-quantize-pytorch==1.19.2",
    "wandb==0.17.5",
]

# Add this section for optional dependencies
[project.optional-dependencies]
gradio = [
    "gradio==5.27.0",
]

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cu121", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu121", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
